--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cloud_firestore: ^4.9.1
   provider: ^6.0.5
   firebase_auth: ^4.9.0
+  firebase_storage: ^11.0.15
+
 
 dev_dependencies:
   flutter_test:
