--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   firebase_auth: ^4.9.0
   firebase_storage: ^11.0.15
   qr_code_scanner: ^1.0.0
-
+#  android_alarm_manager: ^2.0.2
 
 dev_dependencies:
   flutter_test:
